# markllama

./: .prettierignore  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  menu.rs
src-tauri/src/chat/: store.rs
src-tauri/src/diff/: engine.rs
src-tauri/src/fs/: document.rs  image.rs  mod.rs  project.rs
src-tauri/src/ollama/: client.rs  mod.rs  process.rs  prompt.rs  websearch.rs
src-tauri/src/settings/: keychain.rs  mod.rs  store.rs
src/lib/: images.ts  markdown.ts
src/lib/actions/: fileActions.ts
src/lib/components/: ChangesPanel.svelte  ChatLog.svelte  ChatTurn.svelte  DiffView.svelte  Editor.svelte  FileListPicker.svelte  FileSwitchConfirmDialog.svelte  FileTreeNode.svelte  InstructionPresetEditor.svelte  InstructionSelector.svelte  Logo.svelte  ModelInfoDialog.svelte  ModelNoteEditor.svelte  ModelSelector.svelte  OllamaStatus.svelte  SettingsModal.svelte  Sidebar.svelte  ThinkingToggle.svelte  Toolbar.svelte  WebSearchToggle.svelte  editorTheme.ts
src/lib/stores/: attachedFiles.ts  chats.svelte.ts  conversation.svelte.ts  document.svelte.ts  project.svelte.ts  session.svelte.ts  ui.svelte.ts
src/lib/tauri/: chats.ts  diff.ts  fs.ts  ollama.ts  project.ts  settings.ts
src/routes/: +page.svelte  layout.css
