[package]
name = "markllama"
version = "0.1.0"
description = "A lightweight native macOS desktop client for Ollama, focused on editing Markdown documents."
authors = ["Jakub Mareš"]
license = "MIT"
repository = "https://github.com/kubzej/markllama"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
similar = "2"
keyring = { version = "3", features = ["apple-native"] }
base64 = "0.22"
tokio = { version = "1", features = ["time"] }
